# getmatvar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  INSTALL.asv  INSTALL.m  Makefile  README.md  build_mex_mingw.bat  build_mex_msvc.bat  build_with_mingw.bat  build_with_msvc.bat  getmemstr.m  getmemused.m  mexemulate  mexmake.asv  mexmake.m  mexstress.m  mextest.m  mextestthreads.m  testcontroller.m
buildmingw/: build.bat  build_script.bat  rebuild.bat
debugbuildmingw/: build.bat
debugbuildmsvc/: build.bat
mexbuildmingw/: build.bat  rebuild.bat
mexbuildmsvc/: build.bat  rebuild.bat
prebuilt/: getmatvar.m
res/: my_struct1.mat
src/: CMakeLists.txt  chunkedData.c  cleanup.c  createDataObjects.c  ezq.c  ezq.h  fileHelper.c  fillDataObjects.c  getDataObjects.c  getPageSize.c  getSystemInfo.c  getmatvar_.c  getmatvar_.h  init.c  mapping.c  mapping.h  mexPointerSetters.c  mexSet.c  mexopts.bat  mtezq.c  navigate.c  numberHelper.c  placeChunkedData.c  placeData.c  queue.c  queue.h  readMessage.c  superblock.c  utils.c
src/extlib/libdeflate/unix/: Makefile
src/extlib/libdeflate/win/x64/: libdeflate.lib
src/extlib/libdeflate/win/x86/: libdeflate.lib
src/extlib/libdeflate/x64/: libdeflate.lib
src/extlib/libdeflate/x64/unix/: .lib-cflags  Makefile
src/extlib/libdeflate/x86/win/: libdeflate.lib
src/extlib/pthreads-win32/include/: pthread.h  sched.h
src/extlib/thpool/: thpool.c
src/extlib/threadpool/: thpool.c
src/headers/: cleanup.h  createDataObjects.h  ezq.h  fillDataObjects.h  getDataObjects.h  getSystemInfo.h  getmatvar_.h  init.h  mtezq.h  navigate.h  numberHelper.h  placeChunkedData.h  placeData.h  readMessage.h  superblock.h  utils.h
tests/: BasicClass.m  chunkedTest.c  makeTestStrings.m  memtest.c  mexemulate.c  mexstress.m  mextest.m  mextestbig.m  performancereport.vsps  randVarGen.m  simplefunction1.m  simplefunction2.m  test.c  test1.c  userTest.c  usercreatedfunction.m
tests/analysis/: BasicClass.mat  BasicClass1.mat  BasicClass2.mat  anon_func.mat  func-hand.mat  plot.mat  replacecomma.py  tabl.mat  table_and_class.mat  usrfunc.mat
tests/analysis/BasicClass/#refs#/: b.txt  c.txt  d.txt
tests/analysis/BasicClass/#subsystem#/: MCOS.txt
tests/analysis/BasicClass1/#refs#/: b.txt
tests/analysis/BasicClass2/#refs#/: b.txt
tests/analysis/anon_func/#refs#/: b.txt  c.txt  d.txt  f.txt  (+1 more)
tests/analysis/plot/: p.txt
tests/analysis/table_and_class/: bas.txt  tabl.txt
tests/unixtestbench/: Makefile  mapping
tests/unixtestbench/src/: chunkedData.c  fileHelper.c  getSystemInfo.c  mapping.c  mapping.h  queue.h  readMessage.c
tests/unixtestbench/tests/: memtest.c  userTest.c
tests/wintestbench/: CMakeLists.txt
tests/wintestbench/src/: chunkedData.c  fileHelper.c  getSystemInfo.c  mapping.c  mapping.h  numberHelper.c  queue.c  readMessage.c
tests/wintestbench/src/extlib/thpool/: thpool.c
tests/wintestbench/tests/: memtest.c
v7.3Files/: CMakeLists.txt  Makefile  chunkedData.c  chunkedTest.c  fileHelper.c  getPageSize.c  getmatvar.c  getmatvar.h  getmatvar.mexw64  mapping  mapping.c  mapping.h  mexPointerSetters.c  mexmake.m  mexstress.m  mextest.m  mextestbig.m  numberHelper.c  queue.c  readMessage.c  test.c  test1.c  testmex.m  userTest.c
v7.3Files/extlib/mman-win32/: CMakeLists.txt  UpgradeLog.htm  configure  mman.c  mman.h  test.c
v7.3Files/extlib/zlib/: configure.logsh  example  minigzip64  zpipe
v7.3Files/extlib/zlib/datatests/: compressed  in1.bak
v7.3Files/mexbuild/: CMakeLists.txt
v7.3Files/mexbuild/buildmingw/: CMakeCache.txt  Makefile  build_script.bat  cmake_install.cmake  install_manifest.txt  rebuild.bat
v7.3Files/mexbuild/buildmingw/mex/: Makefile  cmake_install.cmake  getmatvar.mexw64  libgetmatvar.mexw32  libgetmatvar.mexw64
v7.3Files/mexbuild/buildmingw/mex/getmatvar/: Makefile  cmake_install.cmake
v7.3Files/mexbuild/cmake/: FindMatlab.cmake
v7.3Files/mexbuild/mex/: CMakeLists.txt  chunkedData.c  fileHelper.c  getmatvar.c  mapping.c  mapping.h  numberHelper.c
v7.3Files/mexbuild/mex/extlib/mman-win32/: CMakeLists.txt  UpgradeLog.htm
v7.3Files/mexbuild/mex/extlib/mman-win32/x64/Release/: mman.lib
v7.3Files/mexbuild/mex/extlib/mman-win32/x64/Release/mman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib.command.1.tlog
v7.3Files/mexbuild/mex/extlib/zlib/: CMakeLists.txt  configure  zconf.h  zpipe.c
v7.3Files/mexbuild/mex/getmatvar/: CMakeLists.txt  chunkedData.c  fileHelper.c  getPageSize.c  getmatvar.c  getmatvar_.c  getmatvar_.h  mapping.c  mapping.h  mexPointerSetters.c  numberHelper.c  readMessage.c
v7.3Files/mexbuild/mex/getmatvar/extlib/mman-win32/: mman.c  mman.vcxproj
v7.3Files/mexbuild/mex/getmatvar/extlib/mman-win32/x64/Release/mman.tlog/: Lib-link.write.1.tlog  mman.lastbuildstate
v7.3Files/mexbuild/mex/getmatvar/extlib/zlib/: Makefile  example64
v7.3Files/mexbuild/mex/getmatvar/extlib/zlib/datatests/: in.bak
v7.3Files/mexbuild/mex/getmatvar/extlib/zlib/examples/: zpipe.c
v7.3Files/res/: arr.mat
v7.3Files/src/: chunkedData.c  fileHelper.c  getMatVar.c  getPageSize.c  getmatvar.c  getmatvar.h  getmatvar.m  getmatvar.mexw64  getmatvar.prj  getmatvar_.c  mapping.c  mapping.h  mexPointerSetters.c  numberHelper.c  queue.c  readMessage.c
v7.3Files/src/extlib/mman-win32/: Makefile  mman.c
v7.3Files/src/extlib/zlib/: minigzip
v7.3Files/src/extlib/zlib/contrib/masmx64/: gvmat64.lst  inffasx64.lst
v7.3Files/src/extlib/zlib/contrib/masmx86/: inffas32.lst  match686.lst
v7.3Files/src/extlib/zlib/contrib/minizip/: iowin32.c
v7.3Files/src/extlib/zlib/contrib/vstudio/vc14/: zlibstat.vcxproj  zlibvc.def
v7.3Files/src/extlib/zlib/datatests/: decompressed1  in  in1
v7.3Files/tests/: arrayFillGetPr.c  arrayFillGetPrDynamicData.c  arrayFillSetData.c  arrayFillSetPr.c  arrayFillSetPr.mexw64  getFH.m  getFH.prj  runner.m  test.c  userTest.c
v7Files/: Makefile  UncompressedDataElement1.txt  UncompressedDataElement2.txt  UncompressedDataElement3.txt  UncompressedDataElement4.txt  UncompressedDataElement5.txt  decompress.c  decompressTest.c
(+43 files in other folders)
